app1Cryptography/microservice3/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-microservice3
spec:
  selector:
    app: app1-microservice3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8003
  type: ClusterIP
