app1Cryptography/microservice3/k8s/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: app1-microservice3
spec:
  selector:
    matchLabels:
      app: app1-microservice3
  action: ALLOW
  rules:
  - from:
    - source:
        principals: [
          "cluster.local/ns/default/sa/app1-microservice1",
          "cluster.local/ns/default/sa/app1-microservice2"
        ]
